Внесены правки, заставляющие подождать пока main-cervice станет доступным для gateway. Выявлена и устранена ошибка в реализации ClientController

--- a/core/main-service/src/main/resources/application.yaml
+++ b/core/main-service/src/main/resources/application.yaml
@@ -2,9 +2,12 @@ spring:
   application:
     name: main-service
   config:
-    import: "optional:configserver:"
+    import: "configserver:"
   cloud:
     config:
+      fail-fast: true
+      retry:
+        useRandomPolicy: true
       discovery:
         enabled: true
         serviceId: config-server
