расписал в application.yaml у gateway параметр Path

--- a/infra/config-server/src/main/resources/config/gateway/application.yaml
+++ b/infra/config-server/src/main/resources/config/gateway/application.yaml
@@ -15,4 +15,4 @@ spring:
         - id: main_service_route
           uri: lb://main-service
           predicates:
-            - Path=/**
+            - Path=/categories/**,/admin/**,/users/**,/events/**,/compilations/**
