--- a/infra/config-server/src/main/resources/config/main-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/main-service/application.yaml
@@ -3,9 +3,9 @@ spring:
     name: main-service
 
   datasource:
-    url: ${DATABASE_URL:jdbc:postgresql://localhost:6543/ewm-database}
-    username: ${DATABASE_USERNAME:user}
-    password: ${DATABASE_PASSWORD:password}
+    url: jdbc:postgresql://localhost:6543/ewm-database
+    username: user
+    password: password
     driver-class-name: org.postgresql.Driver
   sql:
     init:
