--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,18 @@
 services:
   stats-db:
     image: postgres:16.1
-    container_name: postgres-ewm-stats-db
     ports:
       - "6542:5432"
     environment:
+      POSTGRES_DB: ewm-stats
       POSTGRES_USER: stat
       POSTGRES_PASSWORD: stat
-      POSTGRES_DB: ewm-stats
-    healthcheck:
-      test: ["CMD", "pg_isready", "-q", "-d", "ewm-stats", "-U", "stat"]
-      interval: 5s
-      retries: 10
-      timeout: 5s
-
 
   ewm-db:
-    container_name: ewm-db
     image: postgres:16.1
     ports:
       - "6543:5432"
     environment:
-      POSTGRES_DB: ewm-database
+      POSTGRES_DB: ewm-db
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-    healthcheck:
-      test: ["CMD", "pg_isready", "-q", "-d", "ewm-database", "-U", "user"]
-      interval: 5s
-      retries: 10
-      timeout: 5s
