добавил логгирование gateway

--- a/infra/config-server/src/main/resources/config/gateway/application.yaml
+++ b/infra/config-server/src/main/resources/config/gateway/application.yaml
@@ -16,3 +16,7 @@ spring:
           uri: lb://main-service
           predicates:
             - Path=/categories/**,/admin/**,/users/**,/events/**,/compilations/**
+logging:
+  level:
+    org.springframework.cloud.gateway: DEBUG
+    reactor.netty.http.server.HttpServer: DEBUG
