добавил еще логгирования для gateway

--- a/infra/config-server/src/main/resources/config/gateway/application.yaml
+++ b/infra/config-server/src/main/resources/config/gateway/application.yaml
@@ -19,4 +19,8 @@ spring:
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
-    reactor.netty.http.server.HttpServer: DEBUG
+    org.springframework.web.reactive: DEBUG
+    org.springframework.http.server.reactive: DEBUG
+    org.springframework.web.reactive.function.client.ExchangeFunctions: DEBUG
+    reactor.netty.http.client: DEBUG
+    reactor.netty.http.server: DEBUG
