исправлены application.yaml для сервисов. удалены application-work.properties. В test/resources перемещены application-test.properties. По ходу сломались тесты - отремонтированы.

--- a/core/main-service/src/main/resources/application.yaml
+++ b/core/main-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: main-service
   config:
-    import: "configserver:"
+    import: "optional:configserver:"
   cloud:
     config:
       fail-fast: true
