--- a/infra/config-server/src/main/resources/config/main-service/application.yaml
+++ b/infra/config-server/src/main/resources/config/main-service/application.yaml
@@ -3,7 +3,7 @@ spring:
     name: main-service
 
   datasource:
-    url: jdbc:postgresql://postgres-ewm:6543/ewm_db
+    url: jdbc:postgresql://localhost:6543/ewm_db
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
