--- a/stat/stats-server/src/test/resources/application-test.properties
+++ b/stat/stats-server/src/test/resources/application-test.properties
@@ -1,7 +1,6 @@
 server.port=9090
 
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:h2:mem:ewm-database
+spring.datasource.url=jdbc:h2:mem:ewm-stats
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=stat
 spring.datasource.password=stat
@@ -12,6 +11,6 @@ spring.jpa.database=h2
 
 spring.h2.console.enabled=true
 
-spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
-spring.sql.init.data-locations=
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
