--- a/core/main-service/pom.xml
+++ b/core/main-service/pom.xml
@@ -25,9 +25,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>ru.yandex.practicum</groupId>
+            <groupId>ru.practicum</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
 
