--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,6 +17,8 @@
         <module>user-service</module>
         <module>event-service</module>
         <module>request-service</module>
+        <module>comment-service</module>
+        <module>category-service</module>
     </modules>
 
     <properties>
