--- a/stat/stats-client/pom.xml
+++ b/stat/stats-client/pom.xml
@@ -26,12 +26,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>ru.yandex.practicum</groupId>
+            <groupId>ru.practicum</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
-        </dependency>
-        <!-- end of dependency with common classes -->
+        </dependency>        <!-- end of dependency with common classes -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -88,11 +87,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
         </dependency>
-        <dependency>
-            <groupId>ru.practicum</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
+
     </dependencies>
 </project>
