--- a/stat/stats-server/pom.xml
+++ b/stat/stats-server/pom.xml
@@ -26,9 +26,9 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>ru.yandex.practicum</groupId>
+            <groupId>ru.practicum</groupId>
             <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <!-- end of dependency with common classes -->
