--- a/stat/collector/pom.xml
+++ b/stat/collector/pom.xml
@@ -157,7 +157,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>ru.yandex.practicum.telemetry.collector.Collector</mainClass>
+                            <mainClass>ru.yandex.practicum.collector.Collector</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
