--- a/infra/config-server/src/main/resources/config/stat/aggregator/application.yaml
+++ b/infra/config-server/src/main/resources/config/stat/aggregator/application.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: aggregator
   datasource:
-    url: jdbc:postgresql://localhost:6543/ewm_stats
-    username: user
-    password: password
+    url: ${DATABASE_URL:jdbc:postgresql://localhost:6543/ewm_stats}
+    username: ${DATABASE_USERNAME:user}
+    password: ${DATABASE_PASSWORD:password}
     driver-class-name: org.postgresql.Driver
   sql:
     init:
