--- a/stat/analyzer/src/main/resources/application.yaml
+++ b/stat/analyzer/src/main/resources/application.yaml
@@ -14,5 +14,8 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname:localhost}:${eureka.instance.port:8761}/eureka/
+    registryFetchIntervalSeconds: 5
   instance:
     preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 10
