--- a/stat/serialization/avro-schemas/pom.xml
+++ b/stat/serialization/avro-schemas/pom.xml
@@ -38,6 +38,7 @@
             <plugin>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro-maven-plugin</artifactId>
+                <version>1.12.0</version>
                 <executions>
                     <execution>
                         <id>schemas</id>
