--- a/stat/serialization/proto-schemas/pom.xml
+++ b/stat/serialization/proto-schemas/pom.xml
@@ -43,12 +43,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
             </plugin>
 
             <plugin>
                 <groupId>io.github.ascopes</groupId>
                 <artifactId>protobuf-maven-plugin</artifactId>
-
+                <version>3.8.0</version>
                 <configuration>
                     <protocVersion>${protobuf.version}</protocVersion>
 
